# substrate-api-client

./: Cargo.toml
.github/workflows/: ci.yml
client-keystore/: Cargo.toml
compose-macros/: Cargo.toml
examples/: example_benchmark_bulk_xt.rs  example_compose_extrinsic_offline.rs  example_event_callback.rs
node-api/: Cargo.toml
primitives/: Cargo.toml
src/examples/: example_benchmark_bulk_xt.rs  example_compose_extrinsic_offline.rs  example_event_callback.rs
src/extrinsic/: staking.rs
src/std/rpc/ws_client/: mod.rs
test-no-std/: Cargo.toml
tutorials/api-client-tutorial/: Cargo.toml
