[package]
name = "substrate-api-client"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2021"

[workspace]
members = [
	".",
	"compose-macros",
	"client-keystore",
	"node-api",
	"test-no-std",
	"tutorials/api-client-tutorial",
]

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4.14", optional = true }
metadata = { version = "15.0.0", default-features = false, package = "frame-metadata", features = ["v14"] }
primitive-types = { version = "0.11.1", optional = true, features = ["codec"] }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
serde_json = { version = "1.0.79", optional = true }
thiserror = { version = "1.0.30", optional = true }
ws = { version = "0.9.2", optional = true, features = ["ssl"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ['derive'] }

# Substrate dependencies
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", features = ["full_crypto"] }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", package = "sp-version", optional = true }
balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", package = "pallet-balances", optional = true }
staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", package = "pallet-staking", optional = true }
system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", package = "frame-system", optional = true }
transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", package = "pallet-transaction-payment", optional = true }
sp-rpc = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", optional = true }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
support = { default-features = false, git = "https://github.com/paritytech/substrate.git", package = "frame-support", branch = "polkadot-v0.9.18" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# need to add this for the app_crypto macro
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", features = ["full_crypto"] }

# local deps
ac-compose-macros = { path = "compose-macros", default-features = false }
ac-node-api = { path = "node-api", optional = true }
ac-primitives = { path = "primitives", default-features = false }

[dev-dependencies]
env_logger = "0.9"
node-template-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", package = "sp-keyring" }
clap = { version = "2.33", features = ["yaml"] }
wabt = "0.10.0"


[features]
default = ["std", "ws-client"]
std = [
	"sp-application-crypto/std",
	"sp-core/std",
	"codec/std",
	"metadata/std",
	"sp-version",
	"balances",
	"system",
	"sp-runtime/std",
	"support/std",
	"sp-std/std",
	"serde/std",
	"serde_json",
	"log",
	"hex/std",
	"primitive-types",
	"thiserror",
	"sp-rpc",
	"transaction-payment/std",
	# local deps
	"ac-compose-macros/std",
	"ac-node-api",
	"ac-primitives/std",
]
ws-client = ["ws"]
staking-xt = ["std", "staking"]

